2014-10-28 Riccardo Mottola <rm@gnu.org>

	* Modules/Themes/Themes.m
	Don't crash if there is no description.

2014-02-14 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Resources/English.lproj/Localizable.strings
	Spelling error.

2013-09-16 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist
	Change XIM input method to fixed-list picklist.

2013-09-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Defaults.m
	* Modules/Defaults/Defaults.h
	* Modules/Defaults/Resources/English.lproj/Localizable.strings
	* Modules/Defaults/Resources/English.lproj/Defaults.gorm
	Allow localization of category and secription labels.

2013-08-31 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist
	* Modules/Defaults/Resources/English.lproj/Localizable.string
	Remove obsolete Keys pointed out by Fred.

2013-08-31 Riccardo Mottola <rm@gnu.org>

	* Modules/Themes/Resources/English.lproj/Themes.gorm
	* Modules/Themes/Themes.h
	* Modules/Themes/Themes.m
	Show theme license.

2013-08-31 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Defaults.m
	Access bundle cleanly.

2013-08-27 Riccardo Mottola <rm@gnu.org>

	* Modules/Themes/Themes.m
	* Modules/TimeZone/TimeZone.m
	Refer to Bundle using NSPreferencePane accessor

2013-08-26 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Defaults.m
	* Modules/Defaults/GNUmakefile
	* Modules/Defaults/Resources/English.lproj/Defaults.plist
	Allow localization of each preference, keyed by defaults name.

2013-08-09 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Defaults.h
	* Modules/Defaults/Defaults.m
	* Modules/Defaults/Resources/English.lproj/Defaults.gorm
	* Modules/Defaults/Resources/English.lproj/Defaults.plist
	Add editor for lists and use it for Interface Styles.

2013-02-07 Fred Kiefer <FredKiefer@gmx.de>

	* Modules/Themes/Themes.m: Don't set a nil authors string.

2013-02-07 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
